--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/eatividade?useTimezone=true&serverTimezone=GMT
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:h2:mem:db
+spring.datasource.username=diego
+spring.datasource.password=root
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driverClassName=org.h2.Driver
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
